NEXT-589 - Fix order customer relation

--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
@@ -85,7 +85,7 @@
             {% block sw_customer_base_form_customer_number_field %}
                 <sw-field type="text"
                           :label="$tc('sw-customer.baseForm.labelCustomerNumber')"
-                          v-model="customer.number">
+                          v-model="customer.customerNumber">
                 </sw-field>
             {% endblock %}
 
