--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.html.twig
@@ -4,7 +4,7 @@
             <sw-description-list>
                 {% block sw_customer_base_metadata_customer_number %}
                     <dt>{{ $tc('sw-customer.baseInfo.labelCustomerNumber') }}</dt>
-                    <dd>{{ customer.number }}</dd>
+                    <dd>{{ customer.customerNumber }}</dd>
                 {% endblock %}
 
                 {% block sw_customer_base_metadata_customer_group %}
