--- a/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
@@ -3,7 +3,7 @@
 
         {% block sw_order_detail_base_info_card %}
             <sw-user-card :title="$tc('sw-order.detailBase.cardTitleDetails')"
-                          :user="order.customer"
+                          :user="order.orderCustomer"
                           :isLoading="order.isLoading">
 
                 {% block sw_order_detail_base_info_card_actions %}
