NEXT-664 - Add contrast button, refactor button to support full routes

--- a/Resources/administration/src/app/component/base/sw-button/sw-button.html.twig
+++ b/Resources/administration/src/app/component/base/sw-button/sw-button.html.twig
@@ -1,15 +1,28 @@
 {% block sw_button %}
-    {% block sw_button_link %}
-        <router-link v-if="link.length"
-                     :to="{ 'name': link }"
+    {% block sw_button_router_link %}
+        <router-link v-if="routerLink"
+                     :to="routerLink"
                      class="sw-button"
                      :class="buttonClasses">
+            {% block sw_button_router_link_content %}
+                <span class="sw-button__content">
+                    <slot>{% block sw_button_router_link_slot_default %}{% endblock %}</slot>
+                </span>
+            {% endblock %}
+        </router-link>
+    {% endblock %}
+
+    {% block sw_button_link %}
+        <a v-else-if="link"
+           :href="link"
+           class="sw-button"
+           :class="buttonClasses">
             {% block sw_button_link_content %}
                 <span class="sw-button__content">
                     <slot>{% block sw_button_link_slot_default %}{% endblock %}</slot>
                 </span>
             {% endblock %}
-        </router-link>
+        </a>
     {% endblock %}
 
     {% block sw_button_button %}
