--- a/Resources/administration/src/app/assets/less/variables.less
+++ b/Resources/administration/src/app/assets/less/variables.less
@@ -6,6 +6,7 @@
 @color-iron:                     #FAFBFC;
 @color-crimson:                  #DE294C;
 @color-pumpkin-spice:            #FFB75D;
+@color-contrast:                 #FFD700;
 @color-emerald:                  #37D046;
 @color-cadet-blue:               #E8F6FF;
 @color-white:                    #FFF;
