--- a/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
@@ -16,7 +16,7 @@
         {% block sw_order_detail_actions %}
             <template slot="smart-bar-actions">
                 {% block sw_order_detail_actions_abort %}
-                    <sw-button link="sw.order.index" :disabled="order.isLoading">
+                    <sw-button :routerLink="{ name: 'sw.order.index' }" :disabled="order.isLoading">
                         {{ $tc('sw-order.detail.buttonCancel') }}
                     </sw-button>
                 {% endblock %}
