--- a/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-list/sw-settings-country-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-list/sw-settings-country-list.html.twig
@@ -28,7 +28,7 @@
         {% block sw_settings_country_list_smart_bar_actions %}
             <template slot="smart-bar-actions">
                 {% block sw_settings_country_list_smart_bar_actions_add %}
-                    <sw-button :link="'sw.settings.country.create'" variant="primary">
+                    <sw-button :routerLink="{ name: 'sw.settings.country.create' }" variant="primary">
                         {{ $tc('sw-settings-country.list.buttonAddCountry') }}
                     </sw-button>
                 {% endblock %}
