--- a/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.html.twig
@@ -11,7 +11,7 @@
     {% block sw_settings_language_detail_actions %}
 <template slot="smart-bar-actions">
     {% block sw_settings_language_detail_actions_abort %}
-    <sw-button :disabled="language.isLoading" link="sw.settings.language.index">
+    <sw-button :disabled="language.isLoading" :routerLink="{ name: 'sw.settings.language.index' }">
         {{ $tc('sw-settings-language.detail.buttonCancel') }}
     </sw-button>
     {% endblock %}
