--- a/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-detail/sw-settings-payment-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-detail/sw-settings-payment-detail.html.twig
@@ -11,7 +11,7 @@
         {% block sw_settings_payment_detail_actions %}
             <template slot="smart-bar-actions">
                 {% block sw_settings_payment_detail_actions_abort %}
-                    <sw-button :disabled="paymentMethod.isLoading" link="sw.settings.payment.index">
+                    <sw-button :disabled="paymentMethod.isLoading" :routerLink="{ name: 'sw.settings.payment.index' }">
                         {{ $tc('sw-settings-payment.detail.buttonCancel') }}
                     </sw-button>
                 {% endblock %}
