--- a/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-list/sw-settings-payment-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-list/sw-settings-payment-list.html.twig
@@ -28,7 +28,7 @@
         {% block sw_settings_payment_list_smart_bar_actions %}
             <template slot="smart-bar-actions">
                 {% block sw_settings_payment_list_smart_bar_actions_add %}
-                    <sw-button :link="'sw.settings.payment.create'" variant="primary">
+                    <sw-button :routerLink="{ name: 'sw.settings.payment.create' }" variant="primary">
                         {{ $tc('sw-settings-payment.list.buttonAddPaymentMethod') }}
                     </sw-button>
                 {% endblock %}
