--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
@@ -11,7 +11,7 @@
         {% block sw_settings_shipping_detail_actions %}
             <template slot="smart-bar-actions">
                 {% block sw_settings_shipping_detail_actions_abort %}
-                    <sw-button :disabled="shippingMethod.isLoading" link="sw.settings.shipping.index">
+                    <sw-button :disabled="shippingMethod.isLoading" :routerLink="{ name: 'sw.settings.shipping.index' }">
                         {{ $tc('sw-settings-shipping.detail.buttonCancel') }}
                     </sw-button>
                 {% endblock %}
