--- a/Resources/administration/src/module/sw-settings-tax/page/sw-settings-tax-list/sw-settings-tax-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-tax/page/sw-settings-tax-list/sw-settings-tax-list.html.twig
@@ -28,7 +28,7 @@
         {% block sw_settings_tax_list_smart_bar_actions %}
             <template slot="smart-bar-actions">
                 {% block sw_settings_tax_list_smart_bar_actions_add %}
-                    <sw-button :link="'sw.settings.tax.create'" variant="primary">
+                    <sw-button :routerLink="{ name: 'sw.settings.tax.create' }" variant="primary">
                         {{ $tc('sw-settings-tax.list.buttonAddTax') }}
                     </sw-button>
                 {% endblock %}
