--- a/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.less
+++ b/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.less
@@ -79,6 +79,10 @@
         flex-shrink: 0;
         cursor: default;
 
+        &.is--clickAble {
+            cursor: pointer;
+        }
+
         &:hover {
             background: darken(@sw-multi-select-selection-item-color-background, 3%);
         }
