--- a/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.less
+++ b/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.less
@@ -27,4 +27,14 @@
     .sw-field input:disabled {
         color: lighten(@sw-sales-channel-detail-color-text-access-key, 20%);
     }
+
+    .sw-sales-channel-detail-base__delete {
+        margin-top: 10px;
+        padding-top: 30px;
+        border-top: 1px solid @color-steam-cloud;
+    }
+
+    .sw-sales-channel-detail-base__button-delete {
+        text-align: center;
+    }
 }
