NEXT-744: add drag selection to media manager
add general sw-drag-selection-component that can be wrapped around
lists of selectable items
add that component to the media grid

--- a/Resources/administration/src/app/assets/less/global.less
+++ b/Resources/administration/src/app/assets/less/global.less
@@ -17,3 +17,9 @@ html, body, #app {
     height: 100%;
     overflow: hidden;
 }
+
+.sw-drag-select-box {
+    position: absolute;
+    background: @color-drag-select-box;
+    z-index: @z-index-drag-select-box;
+}
