--- a/Resources/administration/src/app/assets/less/variables.less
+++ b/Resources/administration/src/app/assets/less/variables.less
@@ -15,6 +15,7 @@
 @color-steam-cloud:              #D8DDE6;
 @color-link-water:               #FCFCFC;
 @color-light-gray:               #F4F7FA;
+@color-drag-select-box:               rgba(0, 162, 255, .4);
 
 // Module colors
 @color-product:                 #57D9A3;
@@ -39,6 +40,7 @@
 
 // z-index
 @z-index-loader:                 10;
+@z-index-drag-select-box:             100;
 @z-index-multi-select-results:   600;
 @z-index-off-canvas:             750;
 @z-index-flyout:                 700;
