--- a/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.less
@@ -7,6 +7,7 @@
     justify-self: stretch;
     overflow-x: hidden;
     overflow-y: auto;
+    user-select: none;
 
     .sw-media-grid__content {
         display: grid;
